# outofbounds

./: .gitignore  Cargo.toml  README.md  flake.nix  nixos-module.nix
.github/workflows/: build.yml
src/: config.rs  homebox.rs  main.rs  matrix.rs
